--- a/src/pages/cp24.css
+++ b/src/pages/cp24.css
@@ -34,9 +34,13 @@ h3 {
   font-weight: 400;
 }
 
-@media screen and (max-width: 525px) {
+@media (max-width: 525px) {
   .cp24-header {
-    font-size: 2rem;
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.1rem;
   }
 
   p {
