--- a/src/pages/games.css
+++ b/src/pages/games.css
@@ -1,6 +1,8 @@
 .article-container {
   height: 100%;
   width: 100%;
+  z-index: 10;
+  padding-bottom: 30%;
 }
 
 .game-header {
@@ -23,6 +25,7 @@
 .game-image2 {
   width: 100%;
   height: 50%;
+  font-size: clamp(0.9rem, 1.7vw, 1rem);
 }
 
 .game-note {
