--- a/src/pages/nickel.css
+++ b/src/pages/nickel.css
@@ -1,7 +1,10 @@
 .article-container {
   height: 100%;
   width: 100%;
+  z-index: 10;
+  padding-bottom: 30%;
 }
+
 .nickel-header {
   padding: 2%;
   font-size: clamp(1.6rem, 4.5vw, 3.8rem);
@@ -21,14 +24,25 @@
 .nickel-image1,
 .nickel-image2 {
   width: 100%;
+  font-size: clamp(0.9rem, 1.7vw, 1rem);
 }
 
 li {
   font-weight: 300;
   font-size: 1.3rem;
 }
-@media screen and (max-width: 525px) {
+@media (max-width: 525px) {
+  .article-container {
+  }
   .nickel-header {
-    font-size: 1.9rem;
+    font-size: 1.8rem;
+  }
+
+  ul {
+    padding-bottom: 10%;
+  }
+
+  li {
+    font-size: 1.1rem;
   }
 }
