--- a/src/pages/resume.css
+++ b/src/pages/resume.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   overflow: scroll;
+  z-index: 10;
+  padding-bottom: 30%;
 }
 
 .resume-iframe {
