--- a/src/pages/silya.css
+++ b/src/pages/silya.css
@@ -1,13 +1,13 @@
 .article-container {
   width: 100%;
-  padding: 2%;
-  box-sizing: border-box;
-  overflow: scroll;
-  margin-bottom: 10%;
+  height: 100%;
+  z-index: 10;
+  padding-bottom: 30%;
 }
 
 .silya-header {
-  font-size: clamp(1.6rem, 4.5vw, 3.8rem);
+  padding: 2%;
+  font-size: clamp(2rem, 4.5vw, 3.8rem);
   color: dodgerblue;
   font-weight: 600;
   text-align: center;
@@ -17,4 +17,15 @@
 
 .project-image-container {
   margin: 5% 2%;
+  display: flex;
+  justify-content: center;
+}
+
+.page-images {
+  width: 100%;
+  font-size: clamp(0.9rem, 1.7vw, 1rem);
+}
+
+h3 {
+  font-weight: 400;
 }
